added in repository

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
@@ -334,18 +334,28 @@
       </div>
     </div>
   </div>
-</section>
-    <section class=" mt-5" style="background-color: aqua;">
-      <div class="row m">
-        <div class="col-12 col-sm-12 col-md-3">
-          kjhl;joi;e
+</section >
+    <section class="container-fluid  mt-5 footer">
+      <div class="row">
+        <div class="col-12 col-sm-12 col-md-3 st-3">
+          <a class="" href="#"><img src="img/logo2 (1).png" width="250" height="105" alt=""></a>
+          <p>"Discover amazing deals on the latest products — shop smarter, live better!"<br>
+            "Your one-stop online store for fashion, tech, home essentials, and more!"</p>
         </div>
-        <div class="col-12 col-sm-12 col-md-3">
-          kjhl;joi;e
+        <div class="col-12 col-sm-12 col-md-3 footer-link">
+          <b>Quick link</b><br>
+          <a href="#" class="d-block nav-link footer-2">Contact Us</a>
+          <a href="#" class="d-block nav-link footer-2">About Us</a>
+          <a href="#" class="d-block nav-link footer-2">facebook</a>
         </div>
-        <div class="col-12 col-sm-12 col-md-3">
-          kjhl;joi;e
-        </div>
+        <div class="col-12 col-sm-12 col-md-3 footer-link">
+           <b><u><a href="#" class="nav-link">Legal</a></u></b>
+          <a href="#" class="d-block nav-link">Terms of Service</a>
+          <a href="#" class="d-block nav-link">Privacy Policy</a>
+          <a href="#" class="d-block nav-link">Do Not Sell or Share My Personal Information</a>
+          <a href="#" class="d-block nav-link"> Phone: +8801630860277</a>
+
+          </div>
       </div>
     </section>
 
