new-20 is added in repository

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="card-body">
               <h5 class="card-title">Rechargeable Portable Neck Fan</h5>
               <p class="card-text"> 980 Tk <del>1180 Tk</del></p>
-              <a href="#" class="btn btn-primary"> Order now</a>
+              <a href="ditails.html"  class="btn btn-primary"> Order now</a>
             </div>
           </div>
   
